# zapclaw

./: .env.example  .gitignore  ANDROID.md  CHAT.md  Cargo.toml  INSTALL.md  LICENSE  PR_REVIEW_FINDINGS.md  QUICKSTART.md  README.md  REVIEW_SUMMARY.md  bootstrap.sh  gap_analysis_v2.md  memory_embeddings_analysis.md  safepincer.md  task.md  zapclaw.md
docs/: remote-access-plan.md
pincer-cli/: Cargo.toml
pincer-cli/src/: main.rs
pincer-core/: Cargo.toml
pincer-core/benches/: benchmarks.rs
pincer-core/src/: agent.rs  config.rs  lib.rs  llm.rs  memory.rs  sandbox.rs  sanitizer.rs  truncation.rs
pincer-core/tests/: integration_tests.rs  security_fuzz.rs
pincer-tools/: Cargo.toml
pincer-tools/src/: browser_tool.rs  confirmation.rs  cron_tool.rs  edit_tool.rs  exec_tool.rs  file_tool.rs  find_tool.rs  grep_tool.rs  image_tool.rs  lib.rs  math_tool.rs  memory_tool.rs  patch_tool.rs  process_tool.rs  session_tool.rs  web_search_tool.rs
pincer-tunnels/: Cargo.toml
pincer-tunnels/src/: inbound.rs  lib.rs  outbound.rs
safepincer-cli/: Cargo.toml
safepincer-cli/src/: main.rs
safepincer-core/: Cargo.toml
safepincer-core/benches/: benchmarks.rs
safepincer-core/src/: agent.rs  config.rs  confiner.rs  lib.rs  llm.rs  memory.rs  sanitizer.rs
safepincer-core/tests/: integration_tests.rs  security_fuzz.rs
safepincer-tools/: Cargo.toml
safepincer-tools/src/: browser_tool.rs  cron_tool.rs  edit_tool.rs  exec_tool.rs  file_tool.rs  find_tool.rs  grep_tool.rs  image_tool.rs  lib.rs  math_tool.rs  memory_tool.rs  patch_tool.rs  process_tool.rs  session_tool.rs  web_search_tool.rs
safepincer-tunnels/: Cargo.toml
safepincer-tunnels/src/: inbound.rs  lib.rs  outbound.rs
scripts/: gen_certs.sh  pincer-remote.sh  release.sh  sandbox.sh  zapclaw-remote.sh
skills/android-automation/: SKILL.md
zapclaw-cli/: Cargo.toml
zapclaw-cli/src/: main.rs
zapclaw-cli/tests/: sandbox_fail_closed.rs
zapclaw-core/: Cargo.toml
zapclaw-core/benches/: benchmarks.rs
zapclaw-core/src/: agent.rs  config.rs  egress_guard.rs  lib.rs  llm.rs  memory.rs  memory_daemon.rs  sandbox.rs  session.rs  truncation.rs
zapclaw-core/tests/: integration_tests.rs  security_fuzz.rs
zapclaw-core/zapclaw_workspace/.sessions/: overflow-test.jsonl  persist-test-1.jsonl  sessions.json  test-session.jsonl  test_session.jsonl
zapclaw-tools/: Cargo.toml
zapclaw-tools/src/: android_tool.rs  browser_tool.rs  confirmation.rs  cron_tool.rs  edit_tool.rs  exec_tool.rs  file_tool.rs  find_tool.rs  grep_tool.rs  image_tool.rs  lib.rs  math_tool.rs  memory_tool.rs  patch_tool.rs  process_tool.rs  session_tool.rs  web_search_tool.rs
zapclaw-tunnels/: Cargo.toml
zapclaw-tunnels/src/: inbound.rs  lib.rs  outbound.rs  telegram.rs
zapclaw_workspace/: MEMORY.md
zapclaw_workspace/.sessions/: 06cb3250-1357-4382-9855-7feb4983d6ca.jsonl  bf3e4781-e5a1-4b07-9834-e2b7fe4582d8.jsonl  ee93ec95-0d9c-48a7-9820-4471ab2b2b39.jsonl  sessions.json
zapclaw_workspace/memory/: 2026-02-15.md  2026-02-17.md
