[workspace]
members = [
    "zapclaw-core",
    "zapclaw-tools",
    "zapclaw-cli",
    "zapclaw-tunnels",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ZapClaw Contributors"]
description = "Secure, lightweight, high-performance AI agent"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
rusqlite = { version = "0.31", features = ["bundled-full"] }
ring = "0.17"
base64 = "0.22"
regex = "1"
async-trait = "0.1"
hostname = "0.4"
sha2 = "0.10"
tokio-stream = "0.1"
futures-core = "0.3"
