[package]
name = "pincer-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI interface for Pincer agent"

[[bin]]
name = "pincer"
path = "src/main.rs"

[dependencies]
pincer-core = { path = "../pincer-core" }
pincer-tools = { path = "../pincer-tools" }
pincer-tunnels = { path = "../pincer-tunnels" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
rustyline = "14"
uuid = { workspace = true }
reqwest = { workspace = true }
