[package]
name = "safepincer-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI interface for SafePincer agent"

[[bin]]
name = "safepincer"
path = "src/main.rs"

[dependencies]
safepincer-core = { path = "../safepincer-core" }
safepincer-tools = { path = "../safepincer-tools" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
rustyline = "14"
uuid = { workspace = true }
reqwest = { workspace = true }
