[package]
name = "safepincer-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Safe tool implementations for SafePincer"

[dependencies]
safepincer-core = { path = "../safepincer-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
url = "2"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
