[package]
name = "safepincer-tunnels"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Secure tunnel implementations for SafePincer (outbound HTTPS, inbound VPN+RPC)"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
safepincer-core = { path = "../safepincer-core" }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
url = "2"

[dev-dependencies]
tempfile = "3"
