[package]
name = "zapclaw-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core agent runtime for ZapClaw"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
hostname = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
tokio-stream = { workspace = true }
futures-core = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
async-trait = { workspace = true }
zapclaw-tools = { path = "../zapclaw-tools" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

